--- a/chilesRellenos/chilesRellenosRecipe.html
+++ b/chilesRellenos/chilesRellenosRecipe.html
@@ -1,18 +1,23 @@
 <!doctype html>
 <html lang="en">
   <head>
+
+    
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="styles.css" rel="stylesheet">
 
-    <title>Hello, world!</title>
+    <title>Traditional Chiles Rellenos</title>
+
   </head>
   <body>
 
-    <div class="section" width="100%">
+    <div class="section" width="100%" id="topSection">
         <div class="row">
             <div class="col-md-6">
                 <img src="https://cdn.shopify.com/s/files/1/0871/0950/files/Relleno.jpg?v=1665512318" width="100%">
@@ -54,6 +59,41 @@
 
     </div>
    
+    <div class="section" width="100%" id="bottomSection">
+        <div class="row">
+            <div class="col-md-4">
+                <h2 class="bottomSectionH2">How to Cook</h2>
+                <p><b><i>Follow These Instructions For A Great Mexican Dish.</i></b></p>
+
+                <ol>
+                    <li>
+                        Turn a gas burner on medium-high. Char the chiles on the burner grate, turning with tongs. Or char the chiles under the broiler.
+
+                    </li>
+
+                    
+                </ol>
+            </div>
+
+            <div class="col-md-4">
+                <img src="">
+            </div>
+
+            <div class="col-md-4">
+                <h3>Enjoy With:</h3>
+                <p>slay</p>
+
+                <br>
+
+                <h3>Suggested Sides:</h3>
+                <p>slay</p>
+
+                <button>
+                    <a href="">Add to Cart</a>
+                </button>
+            </div>
+        </div>
+    </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
